# rwe-tool

./: .gitignore  QWEN.md  README.md  pyproject.toml  run_mcp_server.py  test.py
data/mock/: case1_jaki_vs_nonjaki.csv
src/rwe_tool/: __init__.py  base.py  engine.py  mcp_server.py  registry.py
src/rwe_tool/tools/: __init__.py  rwe_echo.py
workflows/: case1.md
