[project]
name = "rwe-tool"
version = "0.1.0"
description = "Minimal RWE tool stack with MCP support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rwe_tool"]

[project.scripts]
rwe-mcp-server = "rwe_tool.mcp_server:main"
